# FextifyPlus

./: .gitignore  package-lock.json  package.json  styles.css
src/: app.rs  utils.js
src-tauri/: Cargo.toml  tauri.conf.json  test.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
src/styles/: editorjs.css  styles.css
