[package]
name = "fextify"
version = "2.0.0"
description = "A text editor."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
once_cell = "1.20.2"
rand = "0.8.5"
nanoid = "0.4.0"
directories = "5.0.1"
lazy_static = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
